Revise documentation for Naubat introduction
Updated the content and structure of the documentation to focus on Naubat, its purpose, and its benefits for electric vehicle users.

--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,35 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Qué es Naubat"
+description: "Entiende el estado real de tu vehículo eléctrico con datos independientes"
 ---
 
-## Setting up
+## Una visión clara e independiente de tu coche eléctrico
 
-Get your documentation site up and running in minutes.
+Naubat es una herramienta independiente que te ayuda a **entender cómo se comporta realmente tu vehículo eléctrico o híbrido enchufable**, a partir de datos reales de uso.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+Nuestro objetivo es darte una visión **objetiva, comprensible y útil** sobre aspectos clave como:
+- El uso diario del vehículo
+- El impacto de tu conducción en la batería
+- El estado de salud de la batería a lo largo del tiempo
 
-## Make it yours
+Sin depender únicamente de estimaciones genéricas del fabricante.
 
-Design a docs site that looks great and empowers your users.
+---
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+## ¿Para quién es Naubat?
 
-## Create beautiful pages
+Naubat está pensado para:
+- Usuarios de vehículos eléctricos que quieren **tomar decisiones con datos**
+- Personas que quieren **evitar sorpresas** con la batería a medio y largo plazo
+- Conductores que valoran la **transparencia y la independencia** en la información de su vehículo
 
-Everything you need to create world-class documentation.
+---
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+## Un enfoque basado en datos reales
 
-## Need inspiration?
+Naubat recopila datos directamente del vehículo durante su uso normal y los analiza para generar métricas claras y accionables.
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+No necesitas conocimientos técnicos ni realizar pruebas especiales:  
+la app funciona en segundo plano mientras conduces.
+
+En las siguientes secciones te explicamos **cómo funciona**, **qué necesitas para empezar** y **qué puedes esperar de la plataforma**.
